task fetched via redux and shown dynamically in Task component and a layout issue fixed

--- a/src/Components/Task/Task.module.css
+++ b/src/Components/Task/Task.module.css
@@ -17,6 +17,7 @@
 }
 
 .tasks__items > div {
+  overflow: auto;
   height: 80%;
   width: 90%;
 }
